--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <body>
 
   <!-- Write your HTML in this file -->
-
+  <ul>
+    <li>2 slices of break</li>
+    <li>4 slices of cheese</li>
+    <li>1 tbsp of butter</li>
+  </ul>
 
 
 
